spacing issue fixed

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -338,5 +338,9 @@ input:focus, textarea:focus {
 		font-size: 250%;
 	}
 
+	#photo-box {
+		margin-left: -24px;
+	}
+
 }
 
